1ページつくったお

--- a/top.index.html
+++ b/top.index.html
@@ -10,18 +10,18 @@
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
 </head>
 
-<div class="toppicture">
-	<img src="img/logo.jpg">
+<div class="topdiv1">
+	<img src="img/logo.jpg" class="top">
 </div>
 
-<div class="buttons">
+<div class="topdiv2">
 	<div class="login">
-		<button onclick="location.href=''">
+		<button onclick="location.href=''" class="btn" class="btn1">
 			ログイン
 		</button>
 	</div>
-	<div>
-		<button class="touroku" onclick="location.href=''">
+	<div class="touroku">
+		<button onclick="location.href=''" class="btn" class="btn2">
 			新規登録
 		</button>
 	</div>
