--- a/kouryaku.index.html
+++ b/kouryaku.index.html
@@ -30,24 +30,20 @@
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
-				<a href="home.index.html">
-				<i class="fas fa-home"></i>
-				<span>ホーム</span>
+				<a href="home.index.html"><i class="fas fa-home"></i></a>
+				<span><a href="home.index.html">ホーム</a></span>
 			</li>
 			<li class="menu-list">
-				<a href="kouryaku.index.html">
-				<i class="fas fa-chart-line"></i>
-				<span>攻略</span>
+				<a href="kouryaku.index.html"><i class="fas fa-chart-line"></i></a>
+				<span><a href="kouryaku.index.html">攻略</a></span>
 			</li>
 			<li class="menu-list">
-				<a href="shop.index.html">
-				<i class="fas fa-shopping-cart"></i>
-				<span>ショップ</span>
+				<a href="shop.index.html"><i class="fas fa-shopping-cart"></i></a>
+				<span><a href="shop.index.html">ショップ</a></span>
 			</li>
 			<li class="menu-list">
-				<a href="others.index.html">
-				<i class="fas fa-user-cog"></i>
-				<span>その他</span>
+				<a href="others.index.html"><i class="fas fa-user-cog"></i></a>
+				<span><a href="others.index.html">その他</a></span>
 			</li>
 		</ul>
 	</footer>
