1ページ目をしゅうせいしたお

--- a/top.index.html
+++ b/top.index.html
@@ -21,7 +21,7 @@
 		</button>
 	</div>
 	<div class="touroku">
-		<button onclick="location.href=''" class="btn" class="btn2">
+		<button onclick="location.href='page2.index.html'" class="btn" class="btn2">
 			新規登録
 		</button>
 	</div>
