homeページのコーディング完了（リンクなどは貼ってない）

--- a/home.index.html
+++ b/home.index.html
@@ -27,6 +27,37 @@
 		<img src="img/shop.png" class="hometop" alt="ショップページだよ">
 	</div>
 
+	<main>
+		<div class="sell">
+			<!-- ％、up,down 売り上げ金額などはデータベースとの連携をする箇所 -->
+			<!-- 先月はjsで前の月を出力する -->
+			<p><span class="month" id="js-month">4</span>月の売り上げ　3600円</p>
+			<p>先月比 20% <span>up</span></p>
+		</div>
+		<div class="sale-bt">
+			<button>野菜を販売する</button>
+		</div>
+		<div class="my-balance">
+			<p class="margin-right">会社残高</p>
+			<p>2400円</p>
+		</div>
+		<div class="pare-balance">
+			<p class="margin-right">保護者の残高</p>
+			<p>6000円</p>
+			<a href="" class="charge">チャージする</a>
+		</div>
+		<div>
+			<div class="detail">
+				<h1>月間収支の推移</h1>
+				<a href="">詳しい分析を見る</a>
+			</div>
+			<div class="graph">
+				<!-- データと連携する、今は画像で代用 -->
+				<img src="img/グラフ.png" alt="収支の推移の画像を代替で置き換えている。">
+			</div>
+		</div>
+	</main>
+
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
