5ぺーじをつくったお

--- a/page2.index.html
+++ b/page2.index.html
@@ -26,6 +26,13 @@
 			<input type="text" name="childname" required>
 		</label>
 	</div>
+	<div>
+	<label>
+		保護者の名前
+		<br>
+		<input type="text" name="mamaname" required>
+	</label>
+</div>
 	<br>
 	<div>
 		<label>
