9がつくりかけ

--- a/page9.index.html
+++ b/page9.index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>kodomin layout</title>
 	<link rel="stylesheet" href="css/kodomin.css">
-	<link rel="stylesheet" href="css/sell.css">
+	<link rel="stylesheet" href="css/page9.css">
 
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
@@ -36,16 +36,20 @@
 		<form>
 			<label>
 				野菜の名前
+			 <input type="text" name="野菜の名前">
 			</label>
-			<input type="text" name="野菜の名前">
-			<form oninput="op1.value=Number(tanka.value)*Number(kosu.value);">
-			<input type="number" name="単価" value="tanka">*
-			<input type="number" name="個数" value="kosu">=
-				<output name="op1">
-					0
-				</output>
+			<label>
+				単価
+			　<input type="number" name="単価" value="tanka">
+		  </label>
+			<label>
+				個数
+			  <input type="number" name="個数" value="kosu">
+			</label>
+
 			</form>
-		</form>
+
+			
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
