ページ7の修正

--- a/page7.index.html
+++ b/page7.index.html
@@ -25,8 +25,8 @@
 		<p>
 			〇月〇日
 		</p>
-		<img src="img/graph9.png" alt="経営の表です">
-		<img src="img/table.jpg" alt="収入、支出の表です">
+		<img src="img/graph9.png" alt="経営の表です" class="img1">
+		<img src="img/table.jpg" alt="収入、支出の表です" class="img2">
 	</div>
 	<footer>
 		<ul class="footer-menu">
