ページ9つくったお

--- a/page9.index.html
+++ b/page9.index.html
@@ -36,20 +36,34 @@
 		<form>
 			<label>
 				野菜の名前
+				<br>
 			 <input type="text" name="野菜の名前">
 			</label>
+			<br>
 			<label>
 				単価
-			　<input type="number" name="単価" value="tanka">
+				<br>
+			　<input type="number" name="単価" value="tanka">円
 		  </label>
+			<br>
 			<label>
 				個数
-			  <input type="number" name="個数" value="kosu">
+				<br>
+			  <input type="number" name="個数" value="kosu">円
 			</label>
 
+			<div class="sum">
+			合計________円
+		</div>
 			</form>
 
-			
+			<div class="btndiv">
+				<button onclick="location.href='page10.index.html'" class="btn">
+					野菜を売る
+				</button>
+			</div>
+
+
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
