page12をkouryakuに変更したよ！

--- a/kouryaku.index.html
+++ b/kouryaku.index.html
@@ -10,12 +10,6 @@
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
 </head>
-
-
-
-<!-- 子供が実際にこれを見て買うのが大半、よって子供でもわかりやすいようなUIを -->
-<!-- 漢字にフリガナを振ってもいいかも -->
-
 <body>
 	<header>
 		<h1>
@@ -24,28 +18,48 @@
 		<img src="img/logo.jpg" alt="ロゴ">
 	</header>
 	<div class="main-headding">
-		<img src="img/shop.png" class="kouryakutop" alt="ショップページだよ">
+		<img src="img/shop.png" class="shoptop" alt="ショップページだよ">
 	</div>
-
-	<footer>
-		<ul class="footer-menu">
-			<li class="menu-list">
-				<a href="home.index.html"><i class="fas fa-home"></i></a>
-				<span><a href="home.index.html">ホーム</a></span>
-			</li>
-			<li class="menu-list">
-				<a href="kouryaku.index.html"><i class="fas fa-chart-line"></i></a>
-				<span><a href="kouryaku.index.html">攻略</a></span>
-			</li>
-			<li class="menu-list">
-				<a href="shop.index.html"><i class="fas fa-shopping-cart"></i></a>
-				<span><a href="shop.index.html">ショップ</a></span>
-			</li>
-			<li class="menu-list">
-				<a href="others.index.html"><i class="fas fa-user-cog"></i></a>
-				<span><a href="others.index.html">その他</a></span>
-			</li>
-		</ul>
-	</footer>
-</body>
-</html>
+	<main class="product">
+		<div class="product-img">
+			<img src="img/kaiwaredainkonn.jpg" alt="カイワレ大根の種の商品画像">
+		</div>
+		<div class="product-sentence">
+			<p class="product-name">価格交渉のコツは？</p>
+			<p class="font-small">せっかくなら、つくった野菜は、できるだけ高く売りたい。
+			<br>高く売るコツをまとめました。
+		</p>
+		</div>
+	</main>
+	<main class="product">
+		<div class="product-img">
+			<img src="img/download.jpg" alt="ミニトマトの種の商品画像">
+		</div>
+		<div class="product-sentence">
+			<p class="product-name">収支表ってなに？</p>
+			<p class="font-small">経営戦略に欠かせない収支表。
+			<br>その見方や活用法を伝授します。</p>
+		</div>
+	</main>
+  <footer>
+    <ul class="footer-menu">
+      <li class="menu-list">
+        <a href="home.index.html"><i class="fas fa-home"></i></a>
+        <span><a href="home.index.html">ホーム</a></span>
+      </li>
+      <li class="menu-list">
+        <a href="kouryaku.index.html"><i class="fas fa-chart-line"></i></a>
+        <span><a href="kouryaku.index.html">攻略</a></span>
+      </li>
+      <li class="menu-list">
+        <a href="shop.index.html"><i class="fas fa-shopping-cart"></i></a>
+        <span><a href="shop.index.html">ショップ</a></span>
+      </li>
+      <li class="menu-list">
+        <a href="others.index.html"><i class="fas fa-user-cog"></i></a>
+        <span><a href="others.index.html">その他</a></span>
+      </li>
+    </ul>
+  </footer>
+  </body>
+  </html>
