リンクつけたりしてる～

--- a/home.index.html
+++ b/home.index.html
@@ -35,7 +35,7 @@
 			<p>先月比 20% <span>up</span></p>
 		</div>
 		<div class="sale-bt">
-			<button>野菜を販売する</button>
+			<button onclick="location='page9.index.html'">野菜を販売する</button>
 		</div>
 		<div class="my-balance">
 			<p class="margin-right">会社残高</p>
@@ -44,12 +44,12 @@
 		<div class="pare-balance">
 			<p class="margin-right">保護者の残高</p>
 			<p>6000円</p>
-			<a href="" class="charge">チャージする</a>
+			<a href="page14.html" class="charge">チャージする</a>
 		</div>
 		<div>
 			<div class="detail">
 				<h1>月間収支の推移</h1>
-				<a href="">詳しい分析を見る</a>
+				<a href="page7.index.html">詳しい分析を見る</a>
 			</div>
 			<div class="graph">
 				<!-- データと連携する、今は画像で代用 -->
