--- a/shop.index.html
+++ b/shop.index.html
@@ -31,7 +31,7 @@
 			<img src="img/kaiwaredainkonn.jpg" alt="カイワレ大根の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">かいわれ大根の種</p>
+			<a class="product-name" href="">かいわれ大根の種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
@@ -41,7 +41,7 @@
 			<img src="img/download.jpg" alt="ミニトマトの種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">ミニトマトの種</p>
+			<a class="product-name" href="" >ミニトマトの種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
@@ -51,7 +51,7 @@
 			<img src="img/komatuna.jpg" alt="ミニ小松菜の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">ミニ小松菜の種</p>
+			<a class="product-name" href="">ミニ小松菜の種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
@@ -61,7 +61,7 @@
 			<img src="img/miniretasu.jpg" alt="ミニレタスの種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">ミニレタスの種</p>
+			<a class="product-name" href="">ミニレタスの種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
@@ -71,7 +71,7 @@
 			<img src="img/ninnzin.jpg" alt="人参の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">ミニにんじんの種</p>
+			<a class="product-name" href="">ミニにんじんの種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
@@ -81,7 +81,7 @@
 			<img src="img/radissyu.jpg" alt="ラディッシュの種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">ラディッシュの種</p>
+			<a class="product-name" href="">ラディッシュの種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
@@ -91,7 +91,7 @@
 			<img src="img/tinngennsai .jpg" alt="チンゲン菜の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<p class="product-name">チンゲン菜の種</p>
+			<a class="product-name">チンゲン菜の種</p>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
