--- a/shop2.html
+++ b/shop2.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>kodomin layout</title>
 	<link rel="stylesheet" href="css/kodomin.css">
-	<link rel="stylesheet" href="css/shop.css">
+	<link rel="stylesheet" href="css/shop2.css">
 
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
@@ -18,7 +18,35 @@
 		</h1>
 		<img src="img/logo.jpg" alt="ロゴ">
 	</header>
+	<main class="product">
+		<div class="product-img">
+			<img src="img/kaiwaredainkonn.jpg" alt="カイワレ大根の種の商品画像">
+		</div>
+		<div class="product-sentence">
+			<p class="product-name" href="">かいわれ大根の種</p>
+			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
+			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
+		</div>
+	</main>
+	<p class="line">
+	</p>
+	<div>
+	<p class="center">
+		商品説明商品説明商品説明商品説明商品説明商品説明商品説明商品説明
+		商品説明商品説明商品説明商品説明商品説明商品説明商品説明商品説明
+		商品説明商品説明商品説明商品説明商品説明商品説明商品説明商品説
+	</p>
 
+	<div class="btndiv">
+			<p>
+			会社残高　<span class="large">1300円
+			</p>
+			<div class="margin">
+			</div>
+		<button onclick="location.href='thankyou.index.html'" class="btn">
+			購入する
+		</button>
+</div>
   <footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
