--- a/shop.index.html
+++ b/shop.index.html
@@ -31,71 +31,85 @@
 			<img src="img/kaiwaredainkonn.jpg" alt="カイワレ大根の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name" href="">かいわれ大根の種</p>
+			<a class="product-name" href="shop2.html">かいわれ大根の種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/download.jpg" alt="ミニトマトの種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name" href="" >ミニトマトの種</p>
+			<a class="product-name" href="" >ミニトマトの種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/komatuna.jpg" alt="ミニ小松菜の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name" href="">ミニ小松菜の種</p>
+			<a class="product-name" href="">ミニ小松菜の種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/miniretasu.jpg" alt="ミニレタスの種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name" href="">ミニレタスの種</p>
+			<a class="product-name" href="">ミニレタスの種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/ninnzin.jpg" alt="人参の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name" href="">ミニにんじんの種</p>
+			<a class="product-name" href="">ミニにんじんの種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/radissyu.jpg" alt="ラディッシュの種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name" href="">ラディッシュの種</p>
+			<a class="product-name" href="">ラディッシュの種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/tinngennsai .jpg" alt="チンゲン菜の種の商品画像">
 		</div>
 		<div class="product-sentence">
-			<a class="product-name">チンゲン菜の種</p>
+			<a class="product-name">チンゲン菜の種</a>
 			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
 			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
