--- a/shop3.html
+++ b/shop3.html
@@ -5,11 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>kodomin layout</title>
 	<link rel="stylesheet" href="css/kodomin.css">
-	<link rel="stylesheet" href="css/shop2.css">
+	<link rel="stylesheet" href="css/shop3.css">
 
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
 </head>
+
+
+
+<!-- 子供が実際にこれを見て買うのが大半、よって子供でもわかりやすいようなUIを -->
+<!-- 漢字にフリガナを振ってもいいかも -->
 
 <body>
 	<header>
@@ -18,36 +23,37 @@
 		</h1>
 		<img src="img/logo.jpg" alt="ロゴ">
 	</header>
-	<main class="product">
-		<div class="product-img">
-			<img src="img/kaiwaredainkonn.jpg" alt="カイワレ大根の種の商品画像">
-		</div>
-		<div class="product-sentence">
-			<p class="product-name" href="">かいわれ大根の種</p>
-			<p class="bold">500<span class="font-small">円　＋送料200円</span></p>
-			<p class="font-small">育てやすさ <span class="font-small">★★★★☆ 4.6</span></p>
-		</div>
-	</main>
-	<p class="line">
-	</p>
-	<div>
+<div class="div1">
+	<div class="div2">
 	<p class="center">
-		商品説明商品説明商品説明商品説明商品説明商品説明商品説明商品説明
-		商品説明商品説明商品説明商品説明商品説明商品説明商品説明商品説明
-		商品説明商品説明商品説明商品説明商品説明商品説明商品説明商品説
+		野菜のタネを購入しました。
 	</p>
+</div class="div2">
+	<p class="center">
+		<span class="bold">購入内容</span>
+	</p>
+	<p class="center">
+		タネの種類　ほうれん草<br>
+		単価　200円<br>
+		個数　3個<br>
+		発送予定日　2021年6月15日　
+	</p>
+	<p class="center">
+		合計 600円
+	</p>
+	<p class="zandaka">
+		会社残高 1200円
+	</p>
+</div>
 
 	<div class="btndiv">
-			<p>
-			会社残高　<span class="large">1300円
-			</p>
-			<div class="margin">
-			</div>
-		<button onclick="location.href='shop3.html'" class="btn">
-			購入する
-		</button>
-</div>
-  <footer>
+	  <button onclick="location.href='home.index.html'" class="btn">
+	    ホームに戻る
+	  </button>
+	</div>
+
+
+	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
 				<a href="home.index.html"><i class="fas fa-home"></i></a>
