--- a/kouryaku.index.html
+++ b/kouryaku.index.html
@@ -31,6 +31,8 @@
 		</p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
 	<main class="product">
 		<div class="product-img">
 			<img src="img/download.jpg" alt="ミニトマトの種の商品画像">
@@ -41,6 +43,8 @@
 			<br>その見方や活用法を伝授します。</p>
 		</div>
 	</main>
+	<p class="line">
+	</p>
   <footer>
     <ul class="footer-menu">
       <li class="menu-list">
