--- a/kouryaku2.html
+++ b/kouryaku2.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>kodomin layout</title>
 	<link rel="stylesheet" href="css/kodomin.css">
-	<link rel="stylesheet" href="css/kouryaku.css">
+	<link rel="stylesheet" href="css/kouryaku2.css">
 
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
@@ -21,30 +21,16 @@
 		<img src="img/shop.png" class="shoptop" alt="ショップページだよ">
 	</div>
 	<main class="product">
-		<div class="product-img">
-			<img src="img/kaiwaredainkonn.jpg" alt="カイワレ大根の種の商品画像">
-		</div>
-		<div class="product-sentence">
-			<a class="product-name" href="kouryaku2.html">価格交渉のコツは？</a>
-			<p class="font-small">せっかくなら、つくった野菜は、できるだけ高く売りたい。
-			<br>高く売るコツをまとめました。
-		</p>
-		</div>
+			<h2>
+				価格交渉のコツは？
+			</h2>
+			<br>
+			<p class="honbun">
+				価格交渉のコツは？価格交渉のコツは？価格交渉のコツは？価格交渉のコツは？
+			</p>
+			<img src="img/logo">
 	</main>
-	<p class="line">
-	</p>
-	<main class="product">
-		<div class="product-img">
-			<img src="img/download.jpg" alt="ミニトマトの種の商品画像">
-		</div>
-		<div class="product-sentence">
-			<p class="product-name">収支表ってなに？</p>
-			<p class="font-small">経営戦略に欠かせない収支表。
-			<br>その見方や活用法を伝授します。</p>
-		</div>
-	</main>
-	<p class="line">
-	</p>
+
   <footer>
     <ul class="footer-menu">
       <li class="menu-list">
