ブログ部分のレイアウト作成

--- a/kouryaku2.html
+++ b/kouryaku2.html
@@ -21,14 +21,29 @@
 		<img src="img/shop.png" class="shoptop" alt="ショップページだよ">
 	</div>
 	<main class="product">
-			<h2>
-				価格交渉のコツは？
-			</h2>
-			<br>
-			<p class="honbun">
-				価格交渉のコツは？価格交渉のコツは？価格交渉のコツは？価格交渉のコツは？
-			</p>
-			<img src="img/logo">
+		<h2>価格交渉のコツは？</h2>
+		<div class="honbun">
+			<p class="sentence">　価格交渉のコツは?</p>
+			<p class="sentence">みんなからよく聞かれる、価格交渉のコツを今回ブログに書いていこうと思います！</p>
+			<p class="margin-top">これを読んで、お父さんお母さんとの価格交渉を優位に進めよう！</p>
+			<img src="img/kids_kyouryoku.png" class="img">
+			<h1>ポイントはざっくり３つ！</h1>
+			<ul class="point">
+				<li class="pointList">
+					１、栽培期間で勝負！
+					<p class="margin-top">栽培をしてから収穫までの期間を価格交渉でおりこんでみよう。</p>
+				</li>
+				<li class="pointList">
+					２、頑張ったで勝負！
+					<p class="margin-top">あなたの頑張りをしっかりと説明しよう。あなたはこの栽培にどれだけ頑張ることができたか、どういった目標を持ってやってきたかなど、頑張りを証明できる証拠と一緒に話してみよう！頑張りが認められて価格交渉が上手くいくかも！</p>
+				</li>
+				<li class="pointList">
+					３、苦手な野菜で勝負！
+					<p class="margin-top">あなたの苦手な野菜ってなに？あなたのお父さんお母さんはあなたにその苦手な野菜を食べてほしいと思っている。このことをうまく利用しよう！</p>
+				</li>
+			</ul>
+		</div>
+		<a href="kouryaku.index.html" class="center">攻略トップへ</a>
 	</main>
 
   <footer>
