--- a/changed.index.html
+++ b/changed.index.html
@@ -5,11 +5,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>kodomin layout</title>
 	<link rel="stylesheet" href="css/kodomin.css">
-	<link rel="stylesheet" href="css/others.css">
+	<link rel="stylesheet" href="css/changed.css">
 
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
 </head>
+
+
+
+<!-- 子供が実際にこれを見て買うのが大半、よって子供でもわかりやすいようなUIを -->
+<!-- 漢字にフリガナを振ってもいいかも -->
 
 <body>
 	<header>
@@ -18,45 +23,17 @@
 		</h1>
 		<img src="img/logo.jpg" alt="ロゴ">
 	</header>
-	<div class="main-headding">
-		<img src="img/shop.png" class="otherstop" alt="ショップページだよ">
+	<p>
+		換金が正常に完了しました。
+	</p>
+	<p class="div1">
+		換金後の会社残高　1600円
+	</p>
+	<div class="btndiv">
+	  <button onclick="location.href='home.index.html'" class="btn">
+	    ホームに戻る
+	  </button>
 	</div>
-	<div>
-	<ul>
-		<li class="othersli">
-			<a href="page15.html">
-				換金する
-			</li>
-		<li class="othersli">
-			<a href="page14.html">
-				チャージする
-			</li>
-		<li class="othersli">
-			<a href="page17.html">
-				お知らせ
-			</li>
-		<li class="othersli">
-			<a href="page7.index.html">
-				経営分析
-			</li>
-		<li class="othersli">
-			<a href="page16.html">
-				保護者残高 出入金履歴
-			</li>
-		<li class="othersli">
-			<a href="page21.html">
-				登録情報の変更
-			</li>
-		<li class="othersli">
-			<a href="">
-				アカウントの切り替え
-			</li>
-		<li class="othersli">
-			<a href="page5.index.html">
-				ログアウト
-			</li>
-	</ul>
-</div>
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
