--- a/page14.html
+++ b/page14.html
@@ -60,7 +60,7 @@
 			</div>
 			<!-- ここのシステムはまだ組んでいない -->
 			<div class="center">
-				<input type="submit" value="チャージする" class="charge-btn">
+				<botton onclick="location='charged.index.html'" type="submit" value="" class="charge-btn">チャージする</botton>
 			</div>
 		</form>
 	</main>
