--- a/page15.html
+++ b/page15.html
@@ -45,7 +45,7 @@
 			</div>
 			<!-- ここのシステムはまだ組んでいない -->
 			<div class="center">
-				<input type="submit" value="換金する" class="charge-btn">
+				<botton onclick="location='changed.index.html'" type="submit" value="" class="charge-btn">チャージする</botton>
 			</div>
 		</form>
 	</main>
