18ページの作成と、ページ9の修正

--- a/kouryaku2.html
+++ b/kouryaku2.html
@@ -43,7 +43,9 @@
 				</li>
 			</ul>
 		</div>
-		<a href="kouryaku.index.html" class="center">攻略トップへ</a>
+		<div class="center">
+			<a href="kouryaku.index.html">攻略トップへ</a>
+		</div>
 	</main>
 
   <footer>
