--- a/page9.index.html
+++ b/page9.index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,70 +24,66 @@
 		</h1>
 		<img src="img/logo.jpg" alt="ロゴ">
 	</header>
-	<div>
-		<h2 class="sell">
-			野菜を販売する
-		</h2>
-		<p class="smallfont">
-			販売価格は、買い手と相談して決めましょう
-		</p>
-		<p>
-ここ、個数×単価を合計金額が自動で出せるようにしたい。JS使えないのでよろしくお願いします。。
-		</p>
-		<form>
-			<label>
-				野菜の名前
-				<br>
-			 <input type="text" name="野菜の名前">
-			</label>
+	<h2 class="sell">
+		野菜を販売する
+	</h2>
+	<p class="smallfont">
+		販売価格は、買い手と相談して決めましょう
+	</p>
+	<p>
+		ここ、個数×単価を合計金額が自動で出せるようにしたい。JS使えないのでよろしくお願いします。。
+	</p>
+	<form>
+		<label>
+			野菜の名前
 			<br>
-			<label>
-				単価
-				<br>
+			<input type="text" name="野菜の名前">
+		</label>
+		<br>
+		<label>
+			単価
+			<br>
 			　<input type="number" name="単価" value="tanka">円
-		  </label>
+		</label>
+		<br>
+		<label>
+			個数
 			<br>
-			<label>
-				個数
-				<br>
-			  <input type="number" name="個数" value="kosu">円
-			</label>
+			<input type="number" name="個数" value="kosu">円
+		</label>
 
-			<div class="sum">
+		<div class="sum">
 			合計________円
 		</div>
-			</form>
+	</form>
 
-			<div class="btndiv">
-				<button onclick="location.href='page10.index.html'" class="btn">
-					野菜を売る
-				</button>
-			</div>
+	<div class="btndiv">
+		<button onclick="location.href='page10.index.html'" class="btn">
+			野菜を売る
+		</button>
+	</div>
 
 
 	<footer>
 		<ul class="footer-menu">
 			<li class="menu-list">
-				<a href="home.index.html">
-				<i class="fas fa-home"></i>
-				<span>ホーム</span>
+				<a href="home.index.html"><i class="fas fa-home"></i></a>
+				<span><a href="home.index.html">ホーム</a></span>
 			</li>
 			<li class="menu-list">
-				<a href="kouryaku.index.html">
-				<i class="fas fa-chart-line"></i>
-				<span>攻略</span>
+				<a href="kouryaku.index.html"><i class="fas fa-chart-line"></i></a>
+				<span><a href="kouryaku.index.html">攻略</a></span>
 			</li>
 			<li class="menu-list">
-				<a href="shop.index.html">
-				<i class="fas fa-shopping-cart"></i>
-				<span>ショップ</span>
+				<a href="shop.index.html"><i class="fas fa-shopping-cart"></i></a>
+				<span><a href="shop.index.html">ショップ</a></span>
 			</li>
 			<li class="menu-list">
-				<a href="others.index.html">
-				<i class="fas fa-user-cog"></i>
-				<span>その他</span>
+				<a href="others.index.html"><i class="fas fa-user-cog"></i></a>
+				<span><a href="others.index.html">その他</a></span>
 			</li>
 		</ul>
 	</footer>
 </body>
+
 </html>
