アカウント切り替え

--- a/others.index.html
+++ b/others.index.html
@@ -48,7 +48,7 @@
 				登録情報の変更
 			</li>
 		<li class="othersli">
-			<a href="">
+			<a href="page18.html">
 				アカウントの切り替え
 			</li>
 		<li class="othersli">
