--- a/page18.html
+++ b/page18.html
@@ -13,8 +13,8 @@
 	<div class="topdiv1">
 		<img src="img/logo.jpg" class="top">
 	</div>
-	
-	<form class="flex">
+
+	<form class="flex" action="home.index.html">
 		<label for="selectUser" class="label">ユーザー選択</label>
 		<select name="user" id="userList">
 			<option value="1">ひろき</option>
