--- a/page21.html
+++ b/page21.html
@@ -9,6 +9,7 @@
 
 	<!-- font awsome -->
 	<script src="https://kit.fontawesome.com/c94db687b2.js" crossorigin="anonymous"></script>
+	<script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
   <h2>
     登録情報の変更
     </h2>
-<form metod="post" name="form1">
+<form metod="post" name="form1" action="touroku.html">
   <div>
   <label>
     お子さまの名前
@@ -119,13 +120,12 @@
 				<input type="password" name="hogosyapasscheck" autocomplete="password" required>
 			</label>
 		</div>
-    </form>
+
 
 
 <div class="buttons">
 <div class="change">
-  <button onclick="location.href='home.index.html'" class="btn" class="btn1">
-    変更
+  <input type="submit" class="btn" class="btn1" value="変更">
   </button>
 </div>
 <div class="margin">
@@ -137,6 +137,7 @@
   </button>
 </div>
 </div>
+</form>
 
 
 
