--- a/page3.index.html
+++ b/page3.index.html
@@ -21,7 +21,7 @@
 		お子さまに知られないように保護者専用パスワード(数字四桁)を設定してください。<br>
 		このパスワードは。野菜の売買など、保護者の同意が必要な場合に使用されます。
 	</p>
-	<form>
+	<form metod="post" name="form1" action="page4.index.html">
 	<div>
 			<label>
 				保護者専用パスワード
@@ -39,7 +39,7 @@
 		</div>
 
 		<div class="btndiv">
-			<button type="submit" class="btn">つぎへすすむ
+			<input type="submit" class="btn" value="つぎへすすむ">
 		</div>
 	</form>
 	<p>
