--- a/page4.index.html
+++ b/page4.index.html
@@ -25,5 +25,5 @@
 	</p>
 </div>
 <div class="btndiv">
-	<button onclick="location='top.index.html'" class="btn">スタート画面に戻る
+	<button onclick="location='page5.index.html'" class="btn">スタート画面に戻る
 </div>
