--- a/page17.html
+++ b/page17.html
@@ -29,38 +29,36 @@
 	</div>
 
 	<main>
-		<ul class="news">
-			<li class="news-list">
+			<div class="news-list">
+				<time>2021年4月2日</time>
+				<p>サーバーメンテナンスのお知らせです。以下のリンクから確認できます。</p>
+				<a href="oshirase.html">サーバーメンテナンスのお知らせ</a>
+			</div>
+			<div class="news-list">
 				<time>2021年4月2日</time>
 				<p>新たな種の品種が入荷されました。下のURLから確認できます。</p>
 				<a href="">新たな品種の追加されました</a>
-			</li>
-			<li class="news-list">
+			</div>
+			<div class="news-list">
 				<time>2021年4月2日</time>
 				<p>新たな種の品種が入荷されました。下のURLから確認できます。</p>
 				<a href="">新たな品種の追加されました</a>
-			</li>
-			<li class="news-list">
+			</div>
+			<div class="news-list">
 				<time>2021年4月2日</time>
 				<p>新たな種の品種が入荷されました。下のURLから確認できます。</p>
 				<a href="">新たな品種の追加されました</a>
-			</li>
-			<li class="news-list">
+			</div>
+			<div class="news-list">
 				<time>2021年4月2日</time>
 				<p>新たな種の品種が入荷されました。下のURLから確認できます。</p>
 				<a href="">新たな品種の追加されました</a>
-			</li>
-			<li class="news-list">
+			</div>
+			<div class="news-list">
 				<time>2021年4月2日</time>
 				<p>新たな種の品種が入荷されました。下のURLから確認できます。</p>
 				<a href="">新たな品種の追加されました</a>
-			</li>
-			<li class="news-list">
-				<time>2021年4月2日</time>
-				<p>新たな種の品種が入荷されました。下のURLから確認できます。</p>
-				<a href="">新たな品種の追加されました</a>
-			</li>
-		</ul>
+			</div>
 	</main>
 
 	<footer>
