--- a/page9.index.html
+++ b/page9.index.html
@@ -43,17 +43,17 @@
 		<label>
 			単価
 			<br>
-			　<input type="number" name="単価" value="tanka">円
+			　<input type="number" name="単価" id="tanka">円
 		</label>
 		<br>
 		<label>
 			個数
 			<br>
-			<input type="number" name="個数" value="kosu">円
+			<input type="number" name="個数" id="kosu">円
 		</label>
 
 		<div class="sum">
-			合計________円
+			合計<span id="result"></span>円
 		</div>
 	</form>
 
@@ -86,4 +86,7 @@
 	</footer>
 </body>
 
+<!-- jQuery　読み込み -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="js/page9.js"></script>
 </html>
