おしらせつくった！

--- a/oshirase.html
+++ b/oshirase.html
@@ -25,10 +25,13 @@
 			<p class="sentence">2021年4月2日</p>
 			<p class="sentence">下記の日程でサーバーのメンテナンスをおこないます。メンテナンスの間、こちらのウェブサイトはご利用になれません。</p>
 			<p class="sentence">メンテナンス期間:2021年4月15日　午前9時～午前11時</p>
-			<br>
-			<p class="sentence">ご迷惑をおかけしますが,よろしくお願いします。</p>
+			<p class="sentence">ご迷惑をおかけしますが、よろしくお願いします。</p>
 		</div>
-			<a href="page17.html" class="top">お知らせトップへ</a>
+			<div class="top">
+				<a href="page17.html">
+					お知らせトップへ
+				</a>
+			</div>
 	</main>
 
   <footer>
