パスワードの確認のｊｓを組み込めたよ

--- a/page3.index.html
+++ b/page3.index.html
@@ -26,7 +26,7 @@
 			<label>
 				保護者専用パスワード
 				<br>
-				<input type="password" name="hogosyapass" autocomplete="password" required type="number">
+				<input type="password" name="password" required type="number">
 			</label>
 		</div>
 	<br>
@@ -34,7 +34,7 @@
 			<label>
 				保護者専用パスワード(確認　未設定)
 				<br>
-				<input type="password" name="hogosyapasscheck" autocomplete="password" required>
+				<input type="password" name="passwordConfirm" required type="number">
 			</label>
 		</div>
 
@@ -45,5 +45,10 @@
 	<p>
 		メールアドレス認証のトリガーにしたいんですが、未設定です。よろしくお願いします。。
 	</p>
+	<p>パスワードのところを4桁の数字で入力させたいのですが未設定です。こちらもよろしくお願いします。。</p>
 
 </body>
+<script src="js/page3.js"></script>
+
+</html>
+
