--- a/page14.html
+++ b/page14.html
@@ -20,7 +20,7 @@
 	</header>
 	<main>
 		<h1 class="midasi">チャージする</h1>
-		<form action="">
+		<form action="charged.index.html">
 			<div class="flex">
 				<label for="pare-balance">現在の保護者残高</label>
 				<input type="text" name="bakance" class="input">
@@ -60,7 +60,7 @@
 			</div>
 			<!-- ここのシステムはまだ組んでいない -->
 			<div class="center">
-				<botton onclick="location='charged.index.html'" type="submit" value="" class="charge-btn">チャージする</botton>
+				<input type="submit" value="チャージする" class="charge-btn">
 			</div>
 		</form>
 	</main>
