--- a/page15.html
+++ b/page15.html
@@ -21,7 +21,7 @@
 	</header>
 	<main>
 		<h1 class="midasi">換金する</h1>
-		<form action="">
+		<form action="changed.index.html">
 			<div class="flex">
 				<label for="pare-balance">換金額</label>
 				<!-- 自由記入欄ー会社残高が上限のシステムを組む -->
@@ -45,7 +45,7 @@
 			</div>
 			<!-- ここのシステムはまだ組んでいない -->
 			<div class="center">
-				<botton onclick="location='changed.index.html'" type="submit" value="" class="charge-btn">チャージする</botton>
+				<input type="submit" value="換金する" class="charge-btn">
 			</div>
 		</form>
 	</main>
