header　の構造の変更

--- a/kouryaku.index.html
+++ b/kouryaku.index.html
@@ -12,10 +12,12 @@
 </head>
 <body>
 	<header>
-		<h1>
-			株式会社 ひろき農園
-		</h1>
-		<img src="img/logo.jpg" alt="ロゴ">
+		<div>
+			<h1><span class="small">株式会社</span> ひろき農園</h1>
+		</div>
+		<div class="header-right">
+			<img src="img/logo.jpg" alt="ロゴ">
+		</div>
 	</header>
 	<div class="main-headding">
 		<img src="img/shop.png" class="shoptop" alt="ショップページだよ">
