--- a/page15.html
+++ b/page15.html
@@ -14,10 +14,12 @@
 
 <body>
 	<header>
-		<h1>
-			株式会社 ひろき農園
-		</h1>
-		<img src="img/logo.jpg" alt="ロゴ">
+		<div>
+			<h1><span class="small">株式会社</span> ひろき農園</h1>
+		</div>
+		<div class="header-right">
+			<img src="img/logo.jpg" alt="ロゴ">
+		</div>
 	</header>
 	<main>
 		<h1 class="midasi">換金する</h1>
