--- a/page9.index.html
+++ b/page9.index.html
@@ -19,10 +19,12 @@
 
 <body>
 	<header>
-		<h1>
-			株式会社 ひろき農園
-		</h1>
-		<img src="img/logo.jpg" alt="ロゴ">
+		<div>
+			<h1><span class="small">株式会社</span> ひろき農園</h1>
+		</div>
+		<div class="header-right">
+			<img src="img/logo.jpg" alt="ロゴ">
+		</div>
 	</header>
 	<h2 class="sell">
 		野菜を販売する
