すこしの微調整

--- a/shop.index.html
+++ b/shop.index.html
@@ -26,7 +26,7 @@
 		</div>
 	</header>
 	<div class="main-headding">
-		<img src="img/shop.png" class="shoptop" alt="ショップページだよ">
+		<img src="img/shop.png" class="hometop" alt="ショップページだよ">
 	</div>
 	<main class="product">
 		<div class="product-img">
