--- a/others.index.html
+++ b/others.index.html
@@ -21,42 +21,34 @@
 		</div>
 	</header>
 	<div class="main-headding">
-		<img src="img/shop.png" class="otherstop" alt="ショップページだよ">
+		<img src="img/shop.png" class="hometop" alt="ショップページだよ">
 	</div>
 	<div>
 		<ul>
 			<li class="othersli">
-				<a href="page15.html">
-					換金する
-				</li>
+				<a href="page15.html">換金する</a>
+			</li>
 			<li class="othersli">
-				<a href="page14.html">
-					チャージする
-				</li>
+				<a href="page14.html">チャージする</a>
+			</li>
 			<li class="othersli">
-				<a href="page17.html">
-					お知らせ
-				</li>
+				<a href="page17.html">お知らせ</a>
+			</li>
 			<li class="othersli">
-				<a href="page7.index.html">
-					経営分析
-				</li>
+				<a href="page7.index.html">経営分析</a>
+			</li>
 			<li class="othersli">
-				<a href="page16.html">
-					保護者残高 出入金履歴
-				</li>
+				<a href="page16.html">保護者残高 出入金履歴</a>
+			</li>
 			<li class="othersli">
-				<a href="page21.html">
-					登録情報の変更
-				</li>
+				<a href="page21.html">登録情報の変更</a>
+			</li>
 			<li class="othersli">
-				<a href="page18.html">
-					アカウントの切り替え
-				</li>
+				<a href="page18.html">アカウントの切り替え</a>
+			</li>
 			<li class="othersli">
-				<a href="page5.index.html">
-					ログアウト
-				</li>
+				<a href="page5.index.html">ログアウト</a>
+			</li>
 		</ul>
 	</div>
 	<footer>
